# openclaw_trading_bot

./: .env  .gitignore  README.md  check_poly.py  debug_markets.py  docker-compose.yml  pyproject.toml  start.bat
backend/: Dockerfile  config.py  csv_refresh.py  csv_signals.py  main.py  memory_store.py  requirements.txt
backend/agents/: openai_agent.py
backend/clients/: deribit.py  polymarket.py
backend/db/: database.py
backend/deribit_orderbook_data/: btc.py  eth.py  util.py
backend/engine/: math_engine.py  scanner.py
backend/polymarket_event_csv/: export_events.py
backend/polymarket_markets_export/: export_markets.py
backend/prompts/: openclaw_system_prompt.txt
frontend/: Dockerfile  nginx.conf  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.jsx
frontend/src/components/: AgentSummary.jsx  Leaderboard.jsx  LiveMatrix.jsx  ReasoningCard.jsx
scripts/: debug_scan.py  test_agentic.py
